# Employee-Tracking

./: .env  README.md  pyproject.toml  requirements.txt
Backend/: db.py  main.py  requirements.txt
Backend/attendance/: router.py  schemas.py
Backend/auth/: router.py  schemas.py  utils.py
Backend/leave/: router.py  schemas.py
Backend/payroll/: router.py  schemas.py
Frontend/: .env.production
